상속, 메서드 override 연습.

--- a/lab_python/python14_inheritance.ipynb
+++ b/lab_python/python14_inheritance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNviqFAME0DO6HVfxk3PxxY",
+      "authorship_tag": "ABX9TyOcwczR9e/vRyPLKbZr4NdY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y5ZV-Tdmf-01",
-        "outputId": "838557d9-6645-441b-e461-8b3a1fc02a05"
+        "outputId": "9561143e-7fa7-4ec4-be24-9b799c6e4ee0"
       },
       "execution_count": 2,
       "outputs": [
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "V8bon4LogPzi"
       },
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "-GE7m8sZhBb0"
       },
-      "execution_count": 13,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEfcX98ahgJD",
-        "outputId": "5835126a-5972-4f84-def6-e37a2cc50c75"
+        "outputId": "86213163-0327-4d98-86c0-4cc6d6865a9d"
       },
-      "execution_count": 14,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OQz03m9xhr4z",
-        "outputId": "4af8007d-1674-4689-fb26-791dde3e6394"
+        "outputId": "d8390032-62ff-46ef-8072-9217eca97df3"
       },
-      "execution_count": 16,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "ltt_45Mnq9mc"
       },
-      "execution_count": 39,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "ti2ZKqNlskD2"
       },
-      "execution_count": 41,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4skdtLaUtakH",
-        "outputId": "df0caf1d-14b7-4593-9de7-e5ebfaca090e"
+        "outputId": "d391ea9c-e2b4-49a9-cad3-5644fe908838"
       },
-      "execution_count": 42,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
       "metadata": {
         "id": "ma4HrDFqwJ8k"
       },
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -284,7 +284,7 @@
       "metadata": {
         "id": "FY9O2odkwzkX"
       },
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -297,9 +297,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mo7RtzYoxFom",
-        "outputId": "77eb0a3d-9890-42f0-b365-1682910de7a8"
+        "outputId": "611546ac-572e-4240-d6b5-2a1c984921e4"
       },
-      "execution_count": 32,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "yFdmSsgGxIeu"
       },
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -339,7 +339,7 @@
       "metadata": {
         "id": "CDy0qaStzOGQ"
       },
-      "execution_count": 34,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -352,9 +352,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3wJJcECrzYAu",
-        "outputId": "aca2fe82-c397-42a8-e31e-0078b626917d"
+        "outputId": "f5af0ef3-dbe5-4ec1-c34c-938b838422e6"
       },
-      "execution_count": 35,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,9 +388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S8AMdA-Y56fo",
-        "outputId": "62a4064f-0d74-4095-f7d4-142ac6ea3ad1"
+        "outputId": "2a754037-23b3-408b-cd08-1537fa9370c8"
       },
-      "execution_count": 43,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,9 +423,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r5bjracL6G-o",
-        "outputId": "a4346e74-b7fa-4742-fc9e-4f2b1d16eeef"
+        "outputId": "a480e7f4-04fe-43aa-cf36-ae2aba780c46"
       },
-      "execution_count": 44,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,9 +449,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DhGdd6AM7K4Z",
-        "outputId": "3e12191d-cc32-4321-d260-d60e7076bd76"
+        "outputId": "63fc34ba-f524-46c3-cb0b-a023e802a53e"
       },
-      "execution_count": 45,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +494,7 @@
       "metadata": {
         "id": "Xfc2sCOu7jZg"
       },
-      "execution_count": 52,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -514,9 +514,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_X0bIQN4-rhy",
-        "outputId": "f9b9b83d-92e8-40b1-a5f6-d6ed87dc0e71"
+        "outputId": "225d9f8e-263f-483f-f2a3-c7366ab046da"
       },
-      "execution_count": 53,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,6 +557,86 @@
       "metadata": {
         "id": "csHbABxkEKxR"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Point:\n",
+        "    def __init__(self, x=0, y=0):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'Point(x={self.x}, y={self.y})'\n",
+        "\n",
+        "    def move(self, dx=0, dy=0):\n",
+        "        \"\"\"x좌표를 dx만큼 이동, y좌표를 dy만큼 이동.\"\"\"\n",
+        "        self.x += dx\n",
+        "        self.y += dy\n",
+        "        return self"
+      ],
+      "metadata": {
+        "id": "nK3b_O8Bx55b"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt1 = Point()  # x좌표가 0이고, y좌표가 0인 Point 객체를 생성.\n",
+        "print(pt1)\n",
+        "\n",
+        "pt1.move(dx=1)  # pt1을 x축의 방향으로 1만큼 이동.\n",
+        "print(pt1)\n",
+        "\n",
+        "pt1.move(dy=-1)  # pt1을 y축의 방향으로 -1만큼 이동.\n",
+        "print(pt1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "opSnCoc00vau",
+        "outputId": "0a76b333-daf0-4310-be8c-c1349c95cc90"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Point(x=0, y=0)\n",
+            "Point(x=1, y=0)\n",
+            "Point(x=1, y=-1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt2 = Point(1, 1)\n",
+        "pt2.move(1, 0).move(0, 1)  # 메서드 연쇄 호출\n",
+        "print(pt2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1o8Q0O2_1AIl",
+        "outputId": "e4b32298-07e8-4495-b159-b2f0f0d2a434"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Point(x=2, y=2)\n"
+          ]
+        }
+      ]
     }
   ]
 }
