--- a/lab_python/python14_inheritance.ipynb
+++ b/lab_python/python14_inheritance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcwczR9e/vRyPLKbZr4NdY",
+      "authorship_tag": "ABX9TyOv7MnKRct8O5dkr6SZfvSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -634,6 +634,95 @@
           "name": "stdout",
           "text": [
             "Point(x=2, y=2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 도형은 점을 가지고 있다.(Shape HAS A point.)\n",
+        "class Shape:\n",
+        "    # def __init__(self, point):\n",
+        "    #     \"\"\"Point 타입 객체를 아규먼트로 전달받음.\"\"\"\n",
+        "    #     self.point = point\n",
+        "\n",
+        "    def __init__(self, x=0, y=0):\n",
+        "        \"\"\"Point 타입 객체를 생성하기 위한 x 좌표와 y 좌표를 아규먼트로 전달받음\"\"\"\n",
+        "        self.point = Point(x, y)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'Shape(point={self.point})'\n",
+        "\n",
+        "    def move(self, dx=0, dy=0):\n",
+        "        self.point.move(dx, dy)\n",
+        "        return self  # move 메서드를 호출한 객체(self)를 리터함 -> 메서드 연쇄 호출 가능.\n",
+        "\n",
+        "    def area(self):\n",
+        "        raise NotImplementedError('넓이 계산 메서드를 구현해야 함.')\n",
+        "\n",
+        "    def perimeter(self):\n",
+        "        raise NotImplementedError('둘레길이 계산 메서드를 구현해야 함.')"
+      ],
+      "metadata": {
+        "id": "e3LuqeD4A_vX"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sh = Shape()\n",
+        "print(sh)\n",
+        "\n",
+        "sh.move(1, 0).move(0, 1)\n",
+        "print(sh)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "68lGtl6pBeu_",
+        "outputId": "b8907161-bcbb-45ab-cc56-94ef4c0ee751"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape(point=Point(x=0, y=0))\n",
+            "Shape(point=Point(x=1, y=1))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sh.area()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        },
+        "id": "OiuBYdo8GKrI",
+        "outputId": "465109d7-1379-460c-8a14-a00150ca565d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NotImplementedError",
+          "evalue": "넓이 계산 메서드를 구현해야 함.",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4137311926.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-1445648102.py\u001b[0m in \u001b[0;36marea\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'넓이 계산 메서드를 구현해야 함.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mperimeter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNotImplementedError\u001b[0m: 넓이 계산 메서드를 구현해야 함."
           ]
         }
       ]
