상속, 메서드 override

--- a/lab_python/python14_inheritance.ipynb
+++ b/lab_python/python14_inheritance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOv7MnKRct8O5dkr6SZfvSX",
+      "authorship_tag": "ABX9TyOuh8TU4KMBkpvmTJ7DnLA4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -643,7 +643,7 @@
       "source": [
         "# 도형은 점을 가지고 있다.(Shape HAS A point.)\n",
         "class Shape:\n",
-        "    # def __init__(self, point):\n",
+        "    # def __init__(self, point=Point(0, 0)):\n",
         "    #     \"\"\"Point 타입 객체를 아규먼트로 전달받음.\"\"\"\n",
         "    #     self.point = point\n",
         "\n",
@@ -723,6 +723,268 @@
             "\u001b[0;32m/tmp/ipython-input-4137311926.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/tmp/ipython-input-1445648102.py\u001b[0m in \u001b[0;36marea\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0marea\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'넓이 계산 메서드를 구현해야 함.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mperimeter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mNotImplementedError\u001b[0m: 넓이 계산 메서드를 구현해야 함."
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Shape를 상속하는 Circle 클래스\n",
+        "class Circle(Shape):\n",
+        "    def __init__(self, center_x=0, center_y=0, radius=0):\n",
+        "        super().__init__(center_x, center_y)  # 상위 클래스 객체 생성(초기화) - Shape 클래스의 __init__ 메서드 호출.\n",
+        "        self.radius = radius\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'Circle(center={self.point}, radius={self.radius})'\n",
+        "\n",
+        "    def area(self):\n",
+        "        return 3.14 * self.radius ** 2\n",
+        "\n",
+        "    def perimeter(self):\n",
+        "        return 2 * 3.14 * self.radius"
+      ],
+      "metadata": {
+        "id": "EkfzWXknj28u"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = Circle()\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FRr9uHCTns6H",
+        "outputId": "4e4c7d3c-cb13-4942-c03d-31ba67b82426"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Circle(center=Point(x=0, y=0), radius=0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c.move(1, 2)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X9Cgj6bCnyfQ",
+        "outputId": "6ab9dfcd-12f4-4430-873f-0047f9e43ed1"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Circle(center=Point(x=1, y=2), radius=0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c2 = Circle(radius=10)\n",
+        "print('넓이 =', c2.area())\n",
+        "print('둘레 =', c2.perimeter())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "20HcLMs0r6EI",
+        "outputId": "433dda93-5fb2-4682-8529-441d5de0c9e1"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "넓이 = 314.0\n",
+            "둘레 = 62.800000000000004\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Shape 클래스를 상속하는 Rectangle 클래스\n",
+        "class Rectangle(Shape):\n",
+        "    def __init__(self, corner_x=0, corner_y=0, width=0, height=0):\n",
+        "        super().__init__(corner_x, corner_y)  # Shape 클래스의 __init__ 메서드 호출\n",
+        "        self.width = width\n",
+        "        self.height = height\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'Rectangle(corner={self.point}, width={self.width}, height={self.height})'\n",
+        "\n",
+        "    def area(self):\n",
+        "        return self.width * self.height\n",
+        "\n",
+        "    def perimeter(self):\n",
+        "        return 2 * (self.width + self.height)"
+      ],
+      "metadata": {
+        "id": "8m6IQPnTsNj4"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rect = Rectangle(width=4, height=3)\n",
+        "print(rect)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S3sosjypuYkJ",
+        "outputId": "fa64a5d3-4b32-455a-eae9-316bee3aac75"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rectangle(corner=Point(x=0, y=0), width=4, height=3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('직사각형 넓이 =', rect.area())\n",
+        "print('직사각형 둘레 =', rect.perimeter())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B3Q6HcFcugf4",
+        "outputId": "fec65fbe-991d-4dbc-b456-4066126a416e"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "직사각형 넓이 = 12\n",
+            "직사각형 둘레 = 14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rect.move(-1, -1)\n",
+        "print(rect)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RVgL9sgHwkFZ",
+        "outputId": "9c122992-6be8-47fc-f244-f8fcf919e839"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rectangle(corner=Point(x=-1, y=-1), width=4, height=3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rectangle 클래스를 상속하는 Square 클래스\n",
+        "class Square(Rectangle):\n",
+        "    def __init__(self, corner_x=0, corner_y=0, side=0):\n",
+        "        super().__init__(corner_x, corner_y, side, side)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'Square(corner={self.point}, side={self.width})'"
+      ],
+      "metadata": {
+        "id": "YvOAuc9ayYxp"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "square = Square(side=5)\n",
+        "print(square)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RUPdumX25U1D",
+        "outputId": "c63cf627-ae15-40fe-cc19-0eca2b7bb88a"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Square(corner=Point(x=0, y=0), side=5)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('정사각형 넓이 =', square.area())\n",
+        "print('정사각형 둘레 =', square.perimeter())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LoAJYJg65nMq",
+        "outputId": "710b3f70-994e-4d73-f70c-a7ec725db809"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정사각형 넓이 = 25\n",
+            "정사각형 둘레 = 20\n"
           ]
         }
       ]
