str 클래스 메서드

--- a/lab_python/python15_str.ipynb
+++ b/lab_python/python15_str.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyODqzovvC24y0lggph9fd8p",
+      "authorship_tag": "ABX9TyOok90NBFrFmBMHQTv34GoP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -403,12 +403,211 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# csv(comma-separated values)\n",
+        "csv_str = '1,홍길동,16,학생'\n",
+        "csv_str.split(',')"
+      ],
       "metadata": {
-        "id": "aoj71wAmM23H"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aoj71wAmM23H",
+        "outputId": "afa51aa4-e9d6-417b-e6a9-1705c05f6961"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['1', '홍길동', '16', '학생']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'/'.join(['2025', '12', '17'])\n",
+        "#> 아규먼트로 전달된 리스트를 '/'를 구분자로 하는 문자열로 변환해서 리턴."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "bRG71CsBSjRI",
+        "outputId": "9ebf7929-9137-44bf-c4ec-bd4e5944c20a"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2025/12/17'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "':'.join(['a', 'b', 'c', 'd'])  #> 리스트를 ':'를 구분자로 하는 문자열로 변환해서 리턴."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "cZLSeVKETHGn",
+        "outputId": "46c63bbe-0949-4a12-862f-a02641a2e3d3"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a:b:c:d'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = '        Hello, Python!         안녕하세요.        '\n",
+        "print(sentence)\n",
+        "print(sentence.lstrip())\n",
+        "print(sentence.rstrip())\n",
+        "print(sentence.strip())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JJU6U-ZJTozx",
+        "outputId": "929b48dd-f1c2-4e43-a794-497dfa61b32e"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        Hello, Python!         안녕하세요.        \n",
+            "Hello, Python!         안녕하세요.        \n",
+            "        Hello, Python!         안녕하세요.\n",
+            "Hello, Python!         안녕하세요.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = 'hello python'\n",
+        "s.replace('h', 'H')\n",
+        "#> 문자열 s에서 'h'를 'H'로 변환한 문자열을 리턴."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "rhWiK3X4VTf4",
+        "outputId": "0e3a1d20-e35f-4204-af37-7e2022fadbb4"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello pytHon'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.replace('h', 'H', 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        },
+        "id": "byfGOioSWfFC",
+        "outputId": "13a6da84-66cb-4448-df34-295c733ee7f8"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello python'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence = '안녕하세요. 저는 오쌤입니다. 만나서 반갑습니다.'\n",
+        "sentence.replace('.', '').split(' ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b1OJzdDNXFRY",
+        "outputId": "acc2b9d8-fbba-41e5-db19-e704c6f2a3a2"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['안녕하세요', '저는', '오쌤입니다', '만나서', '반갑습니다']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     }
   ]
 }
