파일 읽기/쓰기. 구글 드라이브 마운트.

--- a/lab_python/python16_file.ipynb
+++ b/lab_python/python16_file.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcU+RBhzb4NjdNvqSRPHRy",
+      "mount_file_id": "19W4n0okL-QyDOQ68bWYDUygFqNmQ7Zyj",
+      "authorship_tag": "ABX9TyP++ipn4qe4YzFMwJEwfHFz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,6 +113,169 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 파일 읽기\n",
+        "\n",
+        "1. 파일 열기(open)\n",
+        "1. 파일에서 내용을 읽기(read, readline, ...)\n",
+        "1. 파일 닫기(close)\n",
+        "\n",
+        "`with ... as ...` 구문을 사용하면 `close()` 메서드는 자동으로 호출됨."
+      ],
+      "metadata": {
+        "id": "miNY9m3XGa4H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(file='hello.txt', mode='r') as f:\n",
+        "    # mode='rt'와 같음. 생략 가능(기본값).\n",
+        "    line = f.readline()  # 한 줄씩 읽기(줄바꿈(\\n)까지 읽기)\n",
+        "    print(line.strip())  # strip() 메서드: 문자열의 시작/끝의 공백 문자들을 제거\n",
+        "    line = f.readline()\n",
+        "    print(line.strip())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wYh8kOWuGxAe",
+        "outputId": "bf8e1485-54d5-443b-eb97-e00d049bc6ae"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello...\n",
+            "안녕???\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`for var in iterable:` 구문에서 파일 스트림 객체를 사용할 수 있음.\n",
+        "\n",
+        "for 반복문에서는 `readline()` 메서드를 호출할 필요가 없음. 반복문이 한 줄씩 읽어줌."
+      ],
+      "metadata": {
+        "id": "yWYFxXmOJFYz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(file='hello.txt') as f:\n",
+        "    for line in f:  # 파일 처음부터 끝까지 한 줄씩 읽어줌.\n",
+        "        print(line.strip())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UZA7jodXJy5A",
+        "outputId": "fc3a4aa7-b13b-41de-eb6f-9e6af3e5ecad"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello...\n",
+            "안녕???\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Google Drive에서 파일 쓰기/읽기\n",
+        "\n",
+        "Colab 런타임과 Google Drive를 연결(드라이브 마운트)"
+      ],
+      "metadata": {
+        "id": "Y7Ri8oozKjS4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Google Drive에 파일 쓰기"
+      ],
+      "metadata": {
+        "id": "q3qhr3_5Ko4n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 구글 드라이브에 저장할 파일 경로(이름)\n",
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/lab_python/emails.txt'"
+      ],
+      "metadata": {
+        "id": "jreFIoJTKtGH"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(file=file_path, mode='w') as f:  # 파일을 (텍스트) 쓰기 모드로 열기\n",
+        "    f.write('jake@itwill.com\\n')\n",
+        "    f.write('hgd@gmail.com\\n')\n",
+        "    f.write('gildong@naver.com\\n')"
+      ],
+      "metadata": {
+        "id": "A1Z5dRTOMxkj"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Google Drive에서 파일 읽기"
+      ],
+      "metadata": {
+        "id": "Bx-8-HPJN03A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(file=file_path) as f:  # 파일을 (텍스트) 읽기 모드로 열기\n",
+        "    for line in f:  # 파일 처음부터 끝까지 한 줄씩 읽기\n",
+        "        print(line.strip())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oyed7_e2NQSb",
+        "outputId": "531b6422-c30c-44e7-b772-24b154976123"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "jake@itwill.com\n",
+            "hgd@gmail.com\n",
+            "gildong@naver.com\n"
+          ]
+        }
+      ]
     }
   ]
 }
