csv 파일 읽기, 데이터 처리 연습.

--- a/lab_python/python17_file_ex.ipynb
+++ b/lab_python/python17_file_ex.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOlmUGFxsOVJ4gitofMJsO8",
+      "mount_file_id": "1GkStFoGGQnk6Ed6q1x3jXw314wdi8aOZ",
+      "authorship_tag": "ABX9TyMi5EQXCj7Cv8Jnq9ZTQ47J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,12 +58,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "MFRQ_zP8PyHf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "file_path = '/content/drive/MyDrive/Colab Notebooks/lab_python/exam.csv'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(file=file_path) as f:  # 파일을 (텍스트) 읽기 모드로 열기.\n",
+        "    f.readline()  # 파일에서 첫번째 줄을 읽음.\n",
+        "\n",
+        "    exam = []  # 데이터들을 저장하기 위한 빈 리스트.\n",
+        "    for line in f:  # 파일의 두번째 줄부터 마지막까지 한 줄씩 읽음.\n",
+        "        exam.append(line.strip().split(','))\n",
+        "\n",
+        "    # list comprehension을 사용:\n",
+        "    # exam = [line.strip().split(',') for line in f]\n",
+        "\n",
+        "    print(exam)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g0Za3hv6Bf3W",
+        "outputId": "ab824690-670d-4514-a687-6e56b4d11d6c"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['1', '1', '50', '98', '50'], ['2', '1', '60', '97', '60'], ['3', '1', '45', '86', '78'], ['4', '1', '30', '98', '58'], ['5', '2', '25', '80', '65'], ['6', '2', '50', '89', '98'], ['7', '2', '80', '90', '45'], ['8', '2', '90', '78', '25'], ['9', '3', '20', '98', '15'], ['10', '3', '50', '98', '45'], ['11', '3', '65', '65', '65'], ['12', '3', '45', '85', '32'], ['13', '4', '46', '98', '65'], ['14', '4', '48', '87', '12'], ['15', '4', '75', '56', '78'], ['16', '4', '58', '98', '65'], ['17', '5', '65', '68', '98'], ['18', '5', '80', '78', '90'], ['19', '5', '89', '68', '87'], ['20', '5', '78', '83', '58']]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = []  # 학생 20명의 데이터를 저장하기 위한 빈 리스트\n",
+        "for row in exam:\n",
+        "    temp = []  # 학생 1명의 id, class, math, english, science 값을 저장할 빈 리스트.\n",
+        "    for x in row:\n",
+        "        temp.append(int(x))\n",
+        "    data.append(temp)\n",
+        "\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yJecZCpkFyaM",
+        "outputId": "99a38718-e3c8-4fba-97d9-13d442e74f4c"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 1, 50, 98, 50], [2, 1, 60, 97, 60], [3, 1, 45, 86, 78], [4, 1, 30, 98, 58], [5, 2, 25, 80, 65], [6, 2, 50, 89, 98], [7, 2, 80, 90, 45], [8, 2, 90, 78, 25], [9, 3, 20, 98, 15], [10, 3, 50, 98, 45], [11, 3, 65, 65, 65], [12, 3, 45, 85, 32], [13, 4, 46, 98, 65], [14, 4, 48, 87, 12], [15, 4, 75, 56, 78], [16, 4, 58, 98, 65], [17, 5, 65, 68, 98], [18, 5, 80, 78, 90], [19, 5, 89, 68, 87], [20, 5, 78, 83, 58]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G11U3iOdHZtW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
