csv 파일 읽기, 데이터 처리 연습

--- a/lab_python/python17_file_ex.ipynb
+++ b/lab_python/python17_file_ex.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GkStFoGGQnk6Ed6q1x3jXw314wdi8aOZ",
-      "authorship_tag": "ABX9TyMi5EQXCj7Cv8Jnq9ZTQ47J",
+      "authorship_tag": "ABX9TyPKxC/eMb3DMY6dY6iRJvra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,9 @@
         "        temp.append(int(x))\n",
         "    data.append(temp)\n",
         "\n",
+        "# list comprehension:\n",
+        "# data = [[int(x) for x in row] for row in exam]\n",
+        "\n",
         "print(data)"
       ],
       "metadata": {
@@ -117,9 +120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yJecZCpkFyaM",
-        "outputId": "99a38718-e3c8-4fba-97d9-13d442e74f4c"
+        "outputId": "5d40f276-2c97-41f5-bbb4-3d3568fcd923"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,9 +135,126 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# math = []  # 수학 점수들만 저장하기 위한 빈 리스트.\n",
+        "# for row in data:  # 2차원 리스트에서 원소(1차원 리스트)를 한 개씩 꺼내면서 반복.\n",
+        "#     math.append(row[2])  # 수학 점수를 math 리스트에 추가.\n",
+        "\n",
+        "math = [row[2] for row in data]\n",
+        "\n",
+        "print(math)"
+      ],
       "metadata": {
-        "id": "G11U3iOdHZtW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G11U3iOdHZtW",
+        "outputId": "35eb4045-d1a2-4ee7-cac4-95729d02718f"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[50, 60, 45, 30, 25, 50, 80, 90, 20, 50, 65, 45, 46, 48, 75, 58, 65, 80, 89, 78]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('수학 최댓값:', max(math))\n",
+        "print('수학 최솟값:', min(math))\n",
+        "print('수학 평균:', sum(math) / len(math))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LlreKZjWRuKr",
+        "outputId": "859b74ab-ea77-47bc-9127-326424e5a55d"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "수학 최댓값: 90\n",
+            "수학 최솟값: 20\n",
+            "수학 평균: 57.45\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# math_class1 = []  # 1반 학생들의 수학 점수를 저장하기 위한 빈 리스트.\n",
+        "# for row in data:\n",
+        "#     if (row[1] == 1):  # class 값이 1이면\n",
+        "#         math_class1.append(row[2])\n",
+        "\n",
+        "math_class1 = [row[2] for row in data if row[1] == 1]\n",
+        "\n",
+        "print(math_class1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zyk30GkkSu5P",
+        "outputId": "0a41a064-96c0-4c49-9978-877ba2a45ed7"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[50, 60, 45, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('1반 수학 총점:', sum(math_class1))\n",
+        "print('1반 수학 평균:', sum(math_class1) / len(math_class1))\n",
+        "print('1반 수학 최댓값:', max(math_class1))\n",
+        "print('1반 수학 최솟값:', min(math_class1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ChFAtVWxTzDB",
+        "outputId": "5ac0e3f7-8578-44b4-f24b-79c0ca205cab"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1반 수학 총점: 185\n",
+            "1반 수학 평균: 46.25\n",
+            "1반 수학 최댓값: 60\n",
+            "1반 수학 최솟값: 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1반 ~ 5반 수학 점수 평균을 모두 출력하세요.\n"
+      ],
+      "metadata": {
+        "id": "FOlZ2ZdUU1iA"
       },
       "execution_count": null,
       "outputs": []
