--- a/lab_python/python17_file_ex.ipynb
+++ b/lab_python/python17_file_ex.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1GkStFoGGQnk6Ed6q1x3jXw314wdi8aOZ",
-      "authorship_tag": "ABX9TyPKxC/eMb3DMY6dY6iRJvra",
+      "authorship_tag": "ABX9TyPFBzBO209mp0vLi8COdtDl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,7 +194,7 @@
       "source": [
         "# math_class1 = []  # 1반 학생들의 수학 점수를 저장하기 위한 빈 리스트.\n",
         "# for row in data:\n",
-        "#     if (row[1] == 1):  # class 값이 1이면\n",
+        "#     if row[1] == 1:  # class 값이 1이면\n",
         "#         math_class1.append(row[2])\n",
         "\n",
         "math_class1 = [row[2] for row in data if row[1] == 1]\n",
@@ -251,13 +251,226 @@
     {
       "cell_type": "code",
       "source": [
-        "# 1반 ~ 5반 수학 점수 평균을 모두 출력하세요.\n"
+        "# 1반 ~ 5반 수학 점수 평균을 모두 출력하세요.\n",
+        "for cls in range(1, 6):\n",
+        "    # math_by_class = []\n",
+        "    # for row in data:\n",
+        "    #     if row[1] == cls:\n",
+        "    #         math_by_class.append(row[2])\n",
+        "    math_by_class = [row[2] for row in data if row[1] == cls]\n",
+        "    mean = sum(math_by_class) / len(math_by_class)\n",
+        "    print(f'{cls}반 수학 평균 = {mean}')"
       ],
       "metadata": {
-        "id": "FOlZ2ZdUU1iA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FOlZ2ZdUU1iA",
+        "outputId": "ca77fe84-8f1f-4f5c-92c3-32413e944216"
       },
-      "execution_count": null,
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1반 수학 평균 = 46.25\n",
+            "2반 수학 평균 = 61.25\n",
+            "3반 수학 평균 = 45.0\n",
+            "4반 수학 평균 = 56.75\n",
+            "5반 수학 평균 = 78.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "class 작성 연습"
+      ],
+      "metadata": {
+        "id": "HVntC4JJfCed"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, id, cls, math, english, science):\n",
+        "        self.id = int(id)\n",
+        "        self.cls = int(cls)\n",
+        "        self.math = int(math)\n",
+        "        self.english = int(english)\n",
+        "        self.science = int(science)\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f'Student(id={self.id}, class={self.cls}, math={self.math}, english={self.english}, science={self.science})'"
+      ],
+      "metadata": {
+        "id": "Ao6aZtSgenyK"
+      },
+      "execution_count": 56,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Student('1', '1', '50', '98', '50')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PyA--QDogxHr",
+        "outputId": "a8917aff-c5f5-4a8d-e5cc-b66cdc627360"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Student(id=1, class=1, math=50, english=98, science=50)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 파일에서 읽은 내용을 Student 객체로 만들어서 리스트에 저장.\n",
+        "exam_student = []\n",
+        "\n",
+        "with open(file=file_path) as f:\n",
+        "    f.readline()\n",
+        "    for line in f:\n",
+        "        row = line.strip().split(',')\n",
+        "        student = Student(row[0], row[1], row[2], row[3], row[4])\n",
+        "        exam_student.append(student)\n",
+        "\n",
+        "exam_student"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ByFJUju_hVfC",
+        "outputId": "c60b6798-8fd0-495e-effd-e2b4809ad454"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Student(id=1, class=1, math=50, english=98, science=50),\n",
+              " Student(id=2, class=1, math=60, english=97, science=60),\n",
+              " Student(id=3, class=1, math=45, english=86, science=78),\n",
+              " Student(id=4, class=1, math=30, english=98, science=58),\n",
+              " Student(id=5, class=2, math=25, english=80, science=65),\n",
+              " Student(id=6, class=2, math=50, english=89, science=98),\n",
+              " Student(id=7, class=2, math=80, english=90, science=45),\n",
+              " Student(id=8, class=2, math=90, english=78, science=25),\n",
+              " Student(id=9, class=3, math=20, english=98, science=15),\n",
+              " Student(id=10, class=3, math=50, english=98, science=45),\n",
+              " Student(id=11, class=3, math=65, english=65, science=65),\n",
+              " Student(id=12, class=3, math=45, english=85, science=32),\n",
+              " Student(id=13, class=4, math=46, english=98, science=65),\n",
+              " Student(id=14, class=4, math=48, english=87, science=12),\n",
+              " Student(id=15, class=4, math=75, english=56, science=78),\n",
+              " Student(id=16, class=4, math=58, english=98, science=65),\n",
+              " Student(id=17, class=5, math=65, english=68, science=98),\n",
+              " Student(id=18, class=5, math=80, english=78, science=90),\n",
+              " Student(id=19, class=5, math=89, english=68, science=87),\n",
+              " Student(id=20, class=5, math=78, english=83, science=58)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "math = [s.math for s in exam_student]\n",
+        "print(math)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kdBHBhspjS-b",
+        "outputId": "22b816e4-f56f-4218-9eaf-9c7ebf49987b"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[50, 60, 45, 30, 25, 50, 80, 90, 20, 50, 65, 45, 46, 48, 75, 58, 65, 80, 89, 78]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "math_class1 = [s.math for s in exam_student if s.cls == 1]\n",
+        "print(math_class1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aR0CJxwPjfcC",
+        "outputId": "9a8b035d-64f0-443f-c015-36a396cf473c"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[50, 60, 45, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 반별 과학 점수 평균 출력\n",
+        "for c in range(1, 6):\n",
+        "    science_by_class = [s.science for s in exam_student if s.cls == c]\n",
+        "    mean = sum(science_by_class) / len(science_by_class)\n",
+        "    print(f'{c}반 과학 점수 평균 = {mean}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x32Em96bk7Gr",
+        "outputId": "579df8d4-8346-4401-ed4a-0630e7d6400d"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1반 과학 점수 평균 = 61.5\n",
+            "2반 과학 점수 평균 = 58.25\n",
+            "3반 과학 점수 평균 = 39.25\n",
+            "4반 과학 점수 평균 = 55.0\n",
+            "5반 과학 점수 평균 = 83.25\n"
+          ]
+        }
+      ]
     }
   ]
 }
